--- a/app/components/components.module.css
+++ b/app/components/components.module.css
@@ -95,8 +95,10 @@
   position: relative;
 
   padding-right: 100px;
-  margin-left: -30px;
-  padding-left: -30px;
+  /* margin-left: -30px; */
+  margin-left: 32px;
+  /* padding-left: 32px; */
+
   margin-top: 10px;
   vertical-align: top;
 }
