--- a/app/resources/pokecenter/pokecenter.module.css
+++ b/app/resources/pokecenter/pokecenter.module.css
@@ -11,6 +11,7 @@
   background-color: none;
   margin-top: 84pt;
   margin-left: 0pt;
+  padding-left: 32px;
   text-align: left;
 }
 
@@ -47,6 +48,8 @@
   margin-left: 16pt;
   margin-right: 16pt;
   margin-bottom: 16t;
+  padding-top: 22px;
+  padding-left: 22px;
 }
 
 /* cards */
