--- a/app/resources/poketcg/poketcg.module.css
+++ b/app/resources/poketcg/poketcg.module.css
@@ -88,7 +88,8 @@
   margin-left: 16pt;
   margin-right: 16pt;
   margin-bottom: 16t;
-  padding-left: 32px;
+  padding-top: 22px;
+  padding-left: 22px;
 }
 
 /* cards */
