--- a/app/resources/resources.module.css
+++ b/app/resources/resources.module.css
@@ -11,6 +11,7 @@
   background-color: none;
   margin-top: 84pt;
   margin-left: 0pt;
+  padding-left: 32px;
   text-align: left;
 }
 
